--- a/src/app.html
+++ b/src/app.html
@@ -91,7 +91,7 @@
 
 			button {
 				background: var(--link);
-				color: var(--white);
+				color: var(--dark-blue);
 				padding: 0.5rem 1rem;
 				border: none;
 				border-radius: var(--border-radius);
@@ -99,6 +99,7 @@
 
 			button:hover {
 				background: var(--link-hover);
+				cursor: pointer;
 			}
 
 			:is(button, button:hover, button:active):disabled {
@@ -163,7 +164,7 @@
 			nav {
 				display: flex;
 				align-items: center;
-				gap: 1em;
+				gap: 2em;
 			}
 
 			nav a {
