--- a/src/app.html
+++ b/src/app.html
@@ -22,6 +22,7 @@
 				--light-blue: hsl(211, 30%, 46%);
 				--white: #ffffff;
 				--off-white: #e0e6eb;
+				--grey: #444444;
 				--black: #1f1f1f;
 				--font: 'Raleway', sans-serif;
 				--font-mono: ui-monospace, 'Cascadia Code', 'Source Code Pro', Menlo, Consolas,
